# DocuClaw

./: .gitignore  CHANGELOG.md  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/readme/: README.de.md  README.es.md  README.fr.md  README.it.md  README.ja.md  README.zh.md
docuclaw/: __init__.py  cli.py  schema.py
docuclaw/adapters/: __init__.py  email_adapter.py
docuclaw/api/: __init__.py  server.py
docuclaw/core/: __init__.py  llm.py  permissions.py  storage.py
docuclaw/parsers/: __init__.py  base.py  de_invoice_parser.py
docuclaw/ui/: __init__.py  app.py
tests/: test_schema.py
website/: README.md  _headers  _redirects  i18n.js  index.html  main.js  robots.txt  sitemap.xml  style.css
